# LicencePlateBlur

./: .gitattributes  README.md  Task10.sln
SolutionItems/: DebugConfig.ps1  ReleaseConfig.ps1
Task10/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Task10.csproj
Task10/Converters/: BoolToVisibilityConverter.cs
Task10/Helpers/: StartupSettings.cs
Task10/Properties/: launchSettings.json
Task10/Resources/: AppResources.xaml  ButtonResources.xaml  ProgressBarStyle.xaml  SliderResources.xaml
Task10/ViewModels/: BaseViewModel.cs  GaussianBlurViewModel.cs
Task10/ViewModels/Commands/: BaseCommand.cs  OpenPhotoCommand.cs  SavePhotoCommand.cs
Task10/Views/: GaussianBlurView.xaml  GaussianBlurView.xaml.cs
Wrapper/: ManagedObject.h  Wrapper.cpp  Wrapper.h  Wrapper.vcxproj
Wrapper/x64/Debug/: Wrapper.dll.recipe  Wrapper.genruntimeconfig.cache  Wrapper.vcxproj.FileListAbsolute.txt
Wrapper/x64/Debug/Wrapper.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Wrapper.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Wrapper/x64/Release/: Wrapper.dll.recipe  Wrapper.genruntimeconfig.cache  Wrapper.vcxproj.FileListAbsolute.txt
Wrapper/x64/Release/Wrapper.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Wrapper.lastbuildstate  (+5 more)
final_core/: CMakeLists.txt  conanfile.txt  frozen_inference.pbtxt
final_core/src/: Blurer.cpp  Blurer.h  CMakeLists.txt  Frame_Blurer.cpp  Video_Renderer.cpp  Video_Stream.cpp
final_core/test/: CmakeLists.txt  test.cpp
